2002-01-17  Pat Thoyts  <Pat.Thoyts@bigfoot.com>

	* crc32.n: formatting fixes
	* sum.n: added new manual page for package sum

2002-01-16  Pat Thoyts  <Pat.Thoyts@bigfoot.com>

	* crc32.tcl: added -seed and -implementation options.
	* crc32.n: updated for the -seed and -impl options
	* crc32.test: added tests for the -seed and -impl options.

2002-01-15  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sum.tcl: initial version of crc::sum command
	* sum.test: initial version of crc::sum command tests
	* cksum.tcl: intial version of crc::cksum command
	* cksum.n: initial version of crc::cksum manual page
	* cksum.test: initial version of crc::cksum command tests
	* crc32.tcl: compatability with sum and cksum commands
	* crc32.test: compatability with sum and cksum tests
	* crc32.n: compatability with sum and cksum manuals

2002-01-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* crc32.tcl: implemented usage of Trf crc-zlib if available.

2002-01-09  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* crc32.tcl: initial version modified from the Wiki source.
	* crc32.n: initial version of man page
	* crc32.test: initial version of crc32 tests.