@@ -6,7 +6,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # -------------------------------------------------------------------------
-# RCS: @(#) $Id: crc32.test,v 1.3 2002/01/16 17:48:41 patthoyts Exp $
+# RCS: @(#) $Id: crc32.test,v 1.4 2002/01/23 20:56:30 patthoyts Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -74,6 +74,8 @@ foreach {n msg expected} {
 
 # -------------------------------------------------------------------------
 
+set crc::testfile [info script]
+
 proc crc::loaddata {filename} {
     set f [open $filename r]
     fconfigure $f -translation binary
@@ -83,8 +85,8 @@ proc crc::loaddata {filename} {
 }
 
 test crc32-4.0 {crc32 file option} {
-    set r1 [::crc::crc32 -file $::argv0]
-    set r2 [::crc::crc32 [crc::loaddata $::argv0]]
+    set r1 [::crc::crc32 -file $crc::testfile]
+    set r2 [::crc::crc32 [crc::loaddata $crc::testfile]]
     if {$r1 != $r2} {
         set r "differing results: $r1 != $r2"
     } else {
@@ -110,7 +112,7 @@ foreach {n seed msg expected} {
 
 if {![catch {package present Trf 2.0}]} {
     test crc32-5.0 {crc32 check Tcl and Trf version identity} {
-        set data [crc::loaddata $::argv0]
+        set data [crc::loaddata $crc::testfile]
         set r1 [::crc::Crc32_trf $data]
         set r2 [::crc::Crc32_tcl $data]
         if {$r1 != $r2} {
@@ -131,6 +133,7 @@ test crc32-6.0 {crc implementation option} {
 
 # -------------------------------------------------------------------------
 
+catch {unset crc::filename}
 ::tcltest::cleanupTests
 
 # Local Variables:
